# xcalc

./: .gitignore  CMakeLists.txt  README.md
assets/: about.txt  help.txt
src/: main.c  module.h  test.c  test.h
src/app/: app.c  app.h  app_tests.c  app_tests.h  calc.c  calc.h  calculator.c  calculator.h  calculator_test.c  expression.c  expression.h  expression_test.c  interpreter.c  interpreter.h  interpreter_test.c  lexer.c  lexer.h  lexer_test.c  parser.c  parser.h  parser_test.c  text.c  text.h  text_test.c  token.c  token.h  token_test.c  vars.c  vars.h
src/cli/: cli.c  cli.h  cli_tests.c  cli_tests.h  list.h  list_test.c  map.h  map_test.c
src/core/: app.h  attrs.h  bool.h  error.c  error.h  errors.c  errors.h  file.c  file.h  function.h  module.h  private.h  status.c  status.h  test.h
src/gui/: app.h  gui.c  gui.h  gui_tests.c  gui_tests.h  size.c  size.h  size_test.c  window.c  window.h  window_test.c
src/gui/comps/: button_comp.c  button_comp.h  button_group_comp.c  button_group_comp.h  input_comp.c  input_comp.h  root_comp.c  root_comp.h
src/tests/: app_tests.c  app_tests.h
